--- a/resources/views/admin/dashboard.edge
+++ b/resources/views/admin/dashboard.edge
@@ -3,7 +3,7 @@
 
 @include('partials/header')
 @include('admin/aside_bar')
-<div class="sm:ml-64 p-10">
+<div class="md:px-10 px-2 py-10">
 @!component('components/breadcrumb')
 </div>
 @include('partials/footer')
