--- a/resources/views/admin/monpotager/show.edge
+++ b/resources/views/admin/monpotager/show.edge
@@ -4,14 +4,14 @@
 @include('partials/header')
 @include('admin/aside_bar')
 <div class="sm:ml-64">
-  <div class="p-10">
+  <div class="md:px-10 px-2 py-10">
     @!component('components/breadcrumb', { breadcrumbs: {
     'Mon potager': route('admin.monpotager.index'),
     'Gérer mon potager': false
     }
     })
   </div>
-  <div class="p-10">
+  <div class="md:px-10 px-2 py-10">
     <h1 class="text-3xl font-bold">{{ potager.name }}</h1>
     <p class="text-gray-500 my-5">{{ potager.description }}</p>
     @each(plantation in plantations)
