--- a/resources/views/admin/plantations/create.edge
+++ b/resources/views/admin/plantations/create.edge
@@ -4,7 +4,7 @@
 @include('partials/header')
 @include('admin/aside_bar')
 <div class="sm:ml-64">
-  <div class="p-10">
+  <div class="md:px-10 px-2 py-10">
     @!component('components/breadcrumb', { breadcrumbs: {
     'Mon potager': route('admin.monpotager.index'),
     'Gérer mon potager' : route('admin.monpotager.show', { idPotager: idPotager }),
