--- a/resources/views/admin/plantes/index.edge
+++ b/resources/views/admin/plantes/index.edge
@@ -4,13 +4,13 @@
 @include('partials/header')
 @include('admin/aside_bar')
 <div class="sm:ml-64">
-  <div class="p-10">
+  <div class="md:px-10 px-2 py-10">
     @!component('components/breadcrumb', { breadcrumbs: {
     'Plantes disponibles': false
     }
     })
   </div>
-  <div class="w-full px-8 py-4">
+  <div class="w-full md:px-8 px-2 py-4">
     <a href="{{ route('admin.plantes.create')}}">
       <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
        focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-5
@@ -30,7 +30,12 @@
           <div class="md:w-1/4 w-1/2 flex items-center">
             <img src="{{ plante.icon }}" alt="plante" class="mt-2 h-10 w-10 rounded-lg mr-4">
             <div>
-              <p class="text-xl font-bold dark:text-white">{{plante.name}}</p>
+              <div class="flex items-center">
+                <p class="text-xl font-bold dark:text-white mr-2">{{plante.name}} </p>
+                  @if(plante.user_id === auth.user.id)
+                  @svg('material-symbols:award-star-rounded', { width: 20, height: 20})
+                  @end
+              </div>
               <p class="text-sm dark:text-gray-300 text-gray-500">Délai avant la récolte : {{plante.delai_recolte}}</p>
               <p class="text-sm dark:text-gray-300 text-gray-500">Délai d'arrosage : {{plante.delai_arrosage}}</p>
             </div>
