--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -3,7 +3,7 @@
 @let(buttonRedirection=route('auth.login'))
 
 @include('partials/header')
-<form action='' class="max-w-sm mx-auto mt-20" method="post" enctype="multipart/form-data">
+<form action='' class="max-w-sm md:mx-auto mt-20 mx-4" method="post" enctype="multipart/form-data">
   {{ csrfField() }}
   @!component('components/input', { title: 'username', label: "Indiquer votre nom d'utilisateur", required: true })
   @!component('components/input', { title: 'email', label: 'Indiquez votre adresse mail', required: true, placeholder:
@@ -16,7 +16,7 @@
   @!component('components/button', { text: 'Créer votre compte' })
 </form>
 
-<div class="border-t-2 border-gray-300 max-w-sm mx-auto mt-5">
+<div class="border-t-2 border-gray-300 max-w-sm mx-auto my-5">
   <p class="text-center mt-5">Vous avez déjà un compte ?
   <a href="{{ route('auth.login') }}" class="text-blue-500 hover:text-blue-700">Se connecter</a>
   </p>
