--- a/resources/views/components/breadcrumb.edge
+++ b/resources/views/components/breadcrumb.edge
@@ -24,7 +24,7 @@
           @if(link)
             <a href="{{ link }}" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">{{ item }}</a>
           @else
-            <span class="ms-1 text-sm font-medium :text-blue-600 md:ms-2 dark:text-white">{{ item }}</span>
+            <span class="ms-1 text-sm font-medium text-blue-600 md:ms-2 dark:text-white">{{ item }}</span>
           @endif
         </div>
       </li>
