--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -14,7 +14,7 @@
       <a href="{{buttonRedirection? buttonRedirection : route('auth.register')}}">
         <button type="button" class="w-32 text-white bg-blue-700 hover:bg-blue-800 
           focus:ring-4 focus:outline-none focus:ring-blue-300 
-          font-medium rounded-lg text-sm px-4 py-2 text-center 
+          font-medium rounded-lg text-sm px-4 py-2 text-center hidden md:flex
           dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">{{buttonText? buttonText :
           defaultButtonText}}</button>
       </a>
@@ -29,9 +29,9 @@
       </button>
     </div>
     @end
-    <div class="flex items-center justify-center hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
+    <div class="hidden w-full md:flex md:w-auto md:order-1 border border-gray-100 rounded-lg bg-gray-50 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700" id="navbar-cta">
       <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 w-full">
+        class="flex flex-col font-medium p-4 md:p-0 mt-4  md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0  w-full">
         @!component('components/itemNav', { isSelected: home ? true : false, title: "Page d'accueil", link: "/" })
         @if(auth.use('web').isAuthenticated)
         @!component('components/itemNav', { isSelected: dashboard ? true : false, title: "Dashboard", link:
@@ -42,6 +42,27 @@
         @!component('components/itemNav', { isSelected: potagers ? true : false, title: "Les potagers", link:
         route('potagers') })
       </ul>
+      @if(auth.use('web').isAuthenticated)
+      <ul
+        class="md:hidden flex flex-col font-medium py-4 mt-4 border-t-2 rtl:space-x-reverse mx-3">
+        <p class="w-full m-3 font-bold text-gray-600 dark:text-gray-200">Administration</p>
+        @!component('components/itemNav', { isSelected: potager ? true : false, title: "Mon potager", link:
+        route('admin.monpotager.index') })
+        @!component('components/itemNav', { isSelected: agenda ? true : false, title: "Agenda", link:
+        route('admin.agenda') })
+        @!component('components/itemNav', { isSelected: tasks ? true : false, title: "Tâches", link:
+        route('admin.taches') })
+      </ul>
+      <ul
+        class="md:hidden flex flex-col font-medium py-4 rtl:space-x-reverse mx-3">
+        @!component('components/itemNav', { isSelected: flower ? true : false, title: "Plantes disponibles", link:
+        route('admin.plantes.index') })
+        @!component('components/itemNav', { isSelected: demandes ? true : false, title: "Demandes", link:
+        route('admin.demandes') })
+        @!component('components/itemNav', { isSelected: settings ? true : false, title: "Paramètres", link:
+        route('admin.settings') })
+      </ul>
+      @end
     </div>
   </div>
 </nav>
