--- a/resources/views/components/itemProject.edge
+++ b/resources/views/components/itemProject.edge
@@ -2,8 +2,8 @@
 
 @each((paragraphs, title) in items)
 @if(count%2 == 0)
-<div class="mb-40 space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
-  <div class="flex items-center justify-center w-full h-80 overflow-hidden rounded-xl">
+<div class="md:mb-40 mb-10 space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
+  <div class="flex items-center justify-center w-full overflow-hidden rounded-xl shadow-xl bg-transparent">
     <img src="img_{{ count + 1}}.webp" alt="Image" class="w-full rounded-xl hover:opacity-80 duration-700">
   </div>
   <div class="w-full">
@@ -14,14 +14,14 @@
   </div>
 </div>
 @else
-<div class="mb-40 space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
+<div class="md:mb-40 mb-10 space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
   <div class="w-full text-end">
     <h1 class="text-xl font-bold text-gray-900 dark:text-gray-100 sm:text-5xl md:text-6xl mb-12"> {{ title }}</h1>
     @each(paragraph in paragraphs)
     <p class="ml-2 text-lg">{{ paragraph }}</p>
     @end
   </div>
-  <div class="flex items-center justify-center w-full h-80 overflow-hidden rounded-xl">
+  <div class="flex items-center justify-center w-full overflow-hidden rounded-xl shadow-xl">
     <img src="img_{{ count + 1 }}.webp" alt="Image" class="w-full rounded-xl hover:opacity-80 duration-700">
   </div>
 </div>
