--- a/resources/views/pages/project.edge
+++ b/resources/views/pages/project.edge
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div class="pb-16 px-32 dark:bg-gray-900">
+<div class="pb-16 md:px-32 px-4 dark:bg-gray-900">
   @!component('components/itemProject', { items: {
         'Gestion de potager': [
           'Créer et gérer votre potager',
@@ -45,7 +45,7 @@
       focus:ring-4 focus:outline-none focus:ring-blue-300 
       font-medium rounded-lg text-sm m-2 p-2 text-center 
       dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800
-      transition-color duration-700 text-xl">Créer un
+      transition-color duration-700">Créer un
       compte</a>
   </div>
   @end
