--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -14,7 +14,7 @@
       <a href="{{buttonRedirection? buttonRedirection : route('auth.register')}}">
         <button type="button" class="w-32 text-white bg-blue-700 hover:bg-blue-800 
           focus:ring-4 focus:outline-none focus:ring-blue-300 
-          font-medium rounded-lg text-sm px-4 py-2 text-center hidden md:flex
+          font-medium rounded-lg text-sm px-4 py-2 text-center hidden md:block
           dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">{{buttonText? buttonText :
           defaultButtonText}}</button>
       </a>
@@ -29,7 +29,7 @@
       </button>
     </div>
     @end
-    <div class="hidden w-full md:flex md:w-auto md:order-1 border border-gray-100 rounded-lg bg-gray-50 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700" id="navbar-cta">
+    <div class="hidden w-full md:flex md:w-auto md:order-1 border border-gray-100 md:border-0 rounded-lg bg-gray-50 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700" id="navbar-cta">
       <ul
         class="flex flex-col font-medium p-4 md:p-0 mt-4  md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0  w-full">
         @!component('components/itemNav', { isSelected: home ? true : false, title: "Page d'accueil", link: "/" })
