--- a/resources/views/pages/project.edge
+++ b/resources/views/pages/project.edge
@@ -3,7 +3,7 @@
 @eval(await auth.use('web').check())
 @include('partials/header')
 
-<div class="py-40 dark:bg-gray-900 flex justify-center">
+<div class="py-40 dark:bg-gradient-to-b dark:from-gray-900 dark:to-gray--00 flex justify-center">
   <div class="container w-full">
     <div class="flex flex-col items-center justify-center space-y-8">
       <h1 class="text-4xl font-bold text-center text-gray-900 dark:text-gray-100 sm:text-5xl md:text-6xl">Mon Potager 🌱
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div class="pb-16 md:px-32 px-4 dark:bg-gray-900">
+<div class="pb-16 md:px-32 px-4 dark:bg-gray-800">
   @!component('components/itemProject', { items: {
         'Gestion de potager': [
           'Créer et gérer votre potager',
